<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.talentica.bookshelf.widgets.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:padding="@dimen/padding_10"
        android:text="@string/add_details_manually"
        android:textColor="@color/normal_grey_text"
        android:textSize="@dimen/text_size_14"
        font:typeface="@string/font_medium" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        font:cardBackgroundColor="@android:color/white"
        font:cardElevation="2dp"
        font:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10">

            <com.talentica.bookshelf.widgets.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_image"
                android:textColor="@color/normal_grey_text"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="51dp"
                    android:layout_height="70dp"
                    android:background="@color/grey" />

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="@dimen/padding_20"
                    android:text="@string/book_image_recommendations"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_name"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_book_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_title"
                android:paddingLeft="@dimen/padding_10"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_author"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_book_author"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_author"
                android:paddingLeft="@dimen/padding_10"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_isbn"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_isbn_13"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_isbn13"
                android:paddingLeft="@dimen/padding_10"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular" />

            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_isbn_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_isbn10"
                android:paddingLeft="@dimen/padding_10"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular" />


            <com.talentica.bookshelf.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/just_publisher"
                android:textColor="@color/normal_grey_text"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular" />


            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_publisher"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_publisher"
                android:paddingLeft="@dimen/padding_10"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular"
                android:textSize="@dimen/text_size_14"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_binding"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_binding"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_isbn13"
                android:paddingLeft="@dimen/padding_10"
                android:textSize="@dimen/text_size_14"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular" />


            <com.talentica.bookshelf.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/book_price"
                android:textColor="@color/normal_grey_text"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular" />


            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_price"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_publisher"
                android:textSize="@dimen/text_size_14"
                android:paddingLeft="@dimen/padding_10"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                font:typeface="@string/font_regular"
                android:layout_marginBottom="@dimen/margin_20"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>