<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.talentica.bookshelf.ForgotPasswordActivity">

    <com.talentica.bookshelf.widgets.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/text_size_16"
        android:textColor="@color/normal_grey_text"
        android:gravity="center"
        font:typeface="@string/font_regular"/>

    <com.talentica.bookshelf.widgets.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_forgot_password_edit_text"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:id="@+id/et_forgot_pwd_email"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_forgot_pwd_email"
        font:typeface="@string/font_regular"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/edit_text_color"
        android:background="@drawable/custom_edit_text"/>

    <com.talentica.bookshelf.widgets.CustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text_send_email"
        android:id="@+id/btn_forgot_password"
        android:layout_below="@+id/et_forgot_pwd_email"
        android:layout_marginTop="20dp"
        font:typeface="@string/font_regular"
        android:textColor="@color/white"
        android:background="@color/green"
        android:textSize="@dimen/text_size_16"/>
</RelativeLayout>
