<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        font:cardBackgroundColor="@android:color/white"
        font:cardElevation="2dp"
        font:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_condition"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <!-- Rohan need to display custom radio buttons -->
            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_book_condition"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_title"
                android:paddingLeft="@dimen/padding_10"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_20">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_tags"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_book_tags"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/add_tags"
                android:paddingLeft="@dimen/padding_10"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular" />




            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_20">

                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book_genre"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/padding_2"
                    android:text="@string/mandatory_field"
                    android:textColor="@color/red" />
            </LinearLayout>

            <!-- Rohan need to change to custom spinner -->
            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_book_genre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_login_edit_text"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/select"
                android:paddingLeft="@dimen/padding_10"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular" />


                <com.talentica.bookshelf.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="@color/normal_grey_text"
                    android:textSize="@dimen/text_size_14"
                    font:typeface="@string/font_regular"
                    android:layout_marginTop="@dimen/margin_20"/>

          <!-- Rohan change this to custom text area -->
            <com.talentica.bookshelf.widgets.CustomEditText
                android:id="@+id/ab_book_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/custom_edit_text"
                android:hint="@string/enter_comments"
                android:paddingLeft="@dimen/padding_10"
                android:textColor="@color/edit_text_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size_14"
                font:typeface="@string/font_regular"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:lines="5"
                android:gravity="top"
                android:paddingTop="@dimen/margin_10"
                android:scrollbars="vertical"
                android:layout_marginBottom="@dimen/margin_20"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>